[gd_scene load_steps=13 format=3 uid="uid://dft2m1je31oka"]

[ext_resource type="Material" uid="uid://w7sb30vbm0ag" path="res://assets/shaders/portal_frame_1.tres" id="1_c3djw"]
[ext_resource type="Script" path="res://scripts/portal_1.gd" id="1_jdx5c"]
[ext_resource type="Texture2D" uid="uid://bk0f6fi8bv0yc" path="res://assets/playerSkins/x64.png" id="3_1685j"]
[ext_resource type="Shader" path="res://assets/shaders/screen_spiral_effect.gdshader" id="3_ajv4w"]

[sub_resource type="ArrayMesh" id="ArrayMesh_rtvjk"]
_surfaces = [{
"aabb": AABB(-4.82843, 0, -4.82843, 9.65685, 0.207171, 9.65685),
"format": 34896613377,
"index_count": 90,
"index_data": PackedByteArray(16, 0, 13, 0, 12, 0, 16, 0, 14, 0, 13, 0, 8, 0, 14, 0, 16, 0, 8, 0, 15, 0, 14, 0, 9, 0, 16, 0, 10, 0, 9, 0, 8, 0, 16, 0, 10, 0, 12, 0, 11, 0, 10, 0, 16, 0, 12, 0, 2, 0, 8, 0, 6, 0, 2, 0, 15, 0, 8, 0, 3, 0, 14, 0, 5, 0, 3, 0, 13, 0, 14, 0, 5, 0, 15, 0, 2, 0, 5, 0, 14, 0, 15, 0, 4, 0, 11, 0, 1, 0, 4, 0, 10, 0, 11, 0, 1, 0, 12, 0, 7, 0, 1, 0, 11, 0, 12, 0, 0, 0, 10, 0, 4, 0, 0, 0, 9, 0, 10, 0, 7, 0, 13, 0, 3, 0, 7, 0, 12, 0, 13, 0, 6, 0, 9, 0, 0, 0, 6, 0, 8, 0, 9, 0, 6, 0, 4, 0, 2, 0, 6, 0, 0, 0, 4, 0, 4, 0, 5, 0, 2, 0, 4, 0, 1, 0, 5, 0, 3, 0, 1, 0, 7, 0, 3, 0, 5, 0, 1, 0),
"lods": [2.37287, PackedByteArray(9, 0, 8, 0, 15, 0, 9, 0, 15, 0, 11, 0, 2, 0, 8, 0, 6, 0, 2, 0, 15, 0, 8, 0, 6, 0, 8, 0, 9, 0, 6, 0, 9, 0, 0, 0, 3, 0, 15, 0, 2, 0, 1, 0, 9, 0, 11, 0, 0, 0, 9, 0, 1, 0, 1, 0, 11, 0, 7, 0, 7, 0, 15, 0, 3, 0, 7, 0, 11, 0, 15, 0, 6, 0, 1, 0, 2, 0, 6, 0, 0, 0, 1, 0, 3, 0, 2, 0, 1, 0, 3, 0, 1, 0, 7, 0), 3.40489, PackedByteArray(8, 0, 15, 0, 11, 0, 7, 0, 8, 0, 0, 0, 7, 0, 15, 0, 8, 0, 1, 0, 8, 0, 11, 0, 1, 0, 11, 0, 7, 0, 0, 0, 8, 0, 1, 0, 7, 0, 11, 0, 15, 0, 0, 0, 1, 0, 7, 0), 3.93108, PackedByteArray(7, 0, 15, 0, 1, 0, 1, 0, 15, 0, 11, 0, 1, 0, 11, 0, 7, 0, 7, 0, 11, 0, 15, 0)],
"name": "portal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 17,
"vertex_data": PackedByteArray(125, 37, 0, 0, 129, 218, 0, 0, 129, 218, 0, 0, 129, 218, 0, 0, 125, 37, 0, 0, 125, 37, 0, 0, 129, 218, 0, 0, 125, 37, 0, 0, 255, 127, 0, 0, 255, 255, 0, 0, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 255, 255, 0, 0, 255, 127, 0, 0, 0, 0, 255, 255, 255, 127, 0, 0, 125, 37, 255, 255, 129, 218, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 129, 218, 255, 255, 129, 218, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 129, 218, 255, 255, 125, 37, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 125, 37, 255, 255, 125, 37, 0, 0, 255, 127, 255, 255, 255, 127, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_itfa8"]
resource_name = "portal_frame_Plane_001"
_surfaces = [{
"aabb": AABB(-4.82843, 0, -4.82843, 9.65685, 0.207171, 9.65685),
"attribute_data": PackedByteArray(129, 218, 255, 255, 129, 218, 255, 255, 129, 218, 255, 255, 255, 255, 124, 165, 255, 255, 124, 165, 255, 255, 124, 165, 255, 127, 129, 218, 255, 127, 129, 218, 255, 127, 129, 218, 124, 165, 255, 127, 124, 165, 255, 127, 124, 165, 255, 127, 255, 255, 129, 218, 255, 255, 129, 218, 255, 255, 129, 218, 255, 127, 124, 165, 255, 127, 124, 165, 255, 127, 124, 165, 124, 165, 255, 255, 124, 165, 255, 255, 124, 165, 255, 255, 129, 218, 255, 127, 129, 218, 255, 127, 129, 218, 255, 127, 225, 166, 241, 252, 225, 166, 241, 252, 225, 166, 241, 252, 85, 217, 218, 252, 85, 217, 218, 252, 85, 217, 218, 252, 241, 252, 28, 217, 241, 252, 28, 217, 241, 252, 28, 217, 218, 252, 169, 166, 218, 252, 169, 166, 218, 252, 169, 166, 28, 217, 12, 131, 28, 217, 12, 131, 28, 217, 12, 131, 169, 166, 36, 131, 169, 166, 36, 131, 169, 166, 36, 131, 12, 131, 225, 166, 12, 131, 225, 166, 12, 131, 225, 166, 36, 131, 85, 217, 36, 131, 85, 217, 36, 131, 85, 217, 255, 191, 255, 191, 255, 255, 124, 165, 255, 255, 124, 165, 255, 255, 124, 165, 129, 218, 255, 127, 129, 218, 255, 127, 218, 252, 169, 166, 218, 252, 169, 166, 218, 252, 169, 166, 36, 131, 85, 217, 36, 131, 85, 217, 36, 131, 85, 217, 129, 218, 255, 255, 129, 218, 255, 255, 255, 255, 124, 165, 255, 255, 124, 165, 255, 255, 124, 165, 129, 218, 255, 127, 129, 218, 255, 127, 225, 166, 241, 252, 225, 166, 241, 252, 225, 166, 241, 252, 218, 252, 169, 166, 218, 252, 169, 166, 218, 252, 169, 166, 36, 131, 85, 217, 36, 131, 85, 217, 129, 218, 255, 255, 255, 255, 124, 165, 255, 255, 124, 165, 255, 127, 129, 218, 124, 165, 255, 127, 124, 165, 255, 127, 124, 165, 255, 255, 129, 218, 255, 127, 225, 166, 241, 252, 85, 217, 218, 252, 85, 217, 218, 252, 218, 252, 169, 166, 218, 252, 169, 166, 36, 131, 85, 217, 36, 131, 85, 217),
"format": 34896613399,
"index_count": 90,
"index_data": PackedByteArray(48, 0, 39, 0, 36, 0, 48, 0, 42, 0, 39, 0, 24, 0, 42, 0, 48, 0, 24, 0, 45, 0, 42, 0, 27, 0, 48, 0, 30, 0, 27, 0, 24, 0, 48, 0, 30, 0, 36, 0, 33, 0, 30, 0, 48, 0, 36, 0, 8, 0, 26, 0, 20, 0, 8, 0, 47, 0, 26, 0, 10, 0, 43, 0, 16, 0, 10, 0, 40, 0, 43, 0, 17, 0, 46, 0, 7, 0, 17, 0, 44, 0, 46, 0, 13, 0, 34, 0, 4, 0, 13, 0, 31, 0, 34, 0, 5, 0, 37, 0, 22, 0, 5, 0, 35, 0, 37, 0, 1, 0, 32, 0, 14, 0, 1, 0, 28, 0, 32, 0, 23, 0, 41, 0, 11, 0, 23, 0, 38, 0, 41, 0, 19, 0, 29, 0, 2, 0, 19, 0, 25, 0, 29, 0, 18, 0, 12, 0, 6, 0, 18, 0, 0, 0, 12, 0, 12, 0, 15, 0, 6, 0, 12, 0, 3, 0, 15, 0, 9, 0, 3, 0, 21, 0, 9, 0, 15, 0, 3, 0),
"lods": [2.37287, PackedByteArray(27, 0, 24, 0, 45, 0, 27, 0, 45, 0, 33, 0, 78, 0, 83, 0, 81, 0, 78, 0, 88, 0, 83, 0, 81, 0, 83, 0, 85, 0, 81, 0, 85, 0, 75, 0, 79, 0, 46, 0, 7, 0, 76, 0, 84, 0, 34, 0, 1, 0, 84, 0, 77, 0, 76, 0, 86, 0, 22, 0, 82, 0, 89, 0, 80, 0, 82, 0, 87, 0, 89, 0, 18, 0, 3, 0, 6, 0, 18, 0, 0, 0, 3, 0, 9, 0, 6, 0, 3, 0, 9, 0, 3, 0, 21, 0), 3.40489, PackedByteArray(24, 0, 45, 0, 33, 0, 65, 0, 67, 0, 60, 0, 65, 0, 73, 0, 67, 0, 62, 0, 68, 0, 70, 0, 63, 0, 71, 0, 22, 0, 61, 0, 69, 0, 64, 0, 66, 0, 72, 0, 74, 0, 0, 0, 3, 0, 21, 0), 3.93108, PackedByteArray(52, 0, 57, 0, 49, 0, 50, 0, 58, 0, 54, 0, 51, 0, 55, 0, 22, 0, 53, 0, 56, 0, 59, 0)],
"material": ExtResource("1_c3djw"),
"name": "portal",
"primitive": 3,
"uv_scale": Vector4(2, 2, 0, 0),
"vertex_count": 90,
"vertex_data": PackedByteArray(125, 37, 0, 0, 129, 218, 54, 51, 125, 37, 0, 0, 129, 218, 122, 156, 125, 37, 0, 0, 129, 218, 255, 175, 129, 218, 0, 0, 129, 218, 54, 51, 129, 218, 0, 0, 129, 218, 95, 208, 129, 218, 0, 0, 129, 218, 203, 221, 125, 37, 0, 0, 125, 37, 54, 51, 125, 37, 0, 0, 125, 37, 203, 242, 125, 37, 0, 0, 125, 37, 205, 214, 129, 218, 0, 0, 125, 37, 54, 51, 129, 218, 0, 0, 125, 37, 110, 251, 129, 218, 0, 0, 125, 37, 255, 255, 255, 127, 0, 0, 255, 255, 54, 51, 255, 127, 0, 0, 255, 255, 211, 176, 255, 127, 0, 0, 255, 255, 249, 170, 255, 127, 0, 0, 0, 0, 54, 51, 255, 127, 0, 0, 0, 0, 119, 248, 255, 127, 0, 0, 0, 0, 103, 247, 0, 0, 0, 0, 255, 127, 54, 51, 0, 0, 0, 0, 255, 127, 255, 175, 0, 0, 0, 0, 255, 127, 110, 210, 255, 255, 0, 0, 255, 127, 54, 51, 255, 255, 0, 0, 255, 127, 170, 235, 255, 255, 0, 0, 255, 127, 246, 255, 0, 0, 255, 255, 255, 127, 209, 204, 0, 0, 255, 255, 255, 127, 255, 175, 0, 0, 255, 255, 255, 127, 141, 210, 125, 37, 255, 255, 129, 218, 209, 204, 125, 37, 255, 255, 129, 218, 254, 155, 125, 37, 255, 255, 129, 218, 255, 175, 255, 127, 255, 255, 255, 255, 209, 204, 255, 127, 255, 255, 255, 255, 206, 175, 255, 127, 255, 255, 255, 255, 109, 170, 129, 218, 255, 255, 129, 218, 209, 204, 129, 218, 255, 255, 129, 218, 80, 207, 129, 218, 255, 255, 129, 218, 77, 221, 255, 255, 255, 255, 255, 127, 209, 204, 255, 255, 255, 255, 255, 127, 40, 235, 255, 255, 255, 255, 255, 127, 245, 255, 129, 218, 255, 255, 125, 37, 209, 204, 129, 218, 255, 255, 125, 37, 139, 251, 129, 218, 255, 255, 125, 37, 255, 255, 255, 127, 255, 255, 0, 0, 209, 204, 255, 127, 255, 255, 0, 0, 145, 248, 255, 127, 255, 255, 0, 0, 149, 247, 125, 37, 255, 255, 125, 37, 209, 204, 125, 37, 255, 255, 125, 37, 234, 242, 125, 37, 255, 255, 125, 37, 255, 214, 255, 127, 255, 255, 255, 127, 209, 204, 129, 218, 0, 0, 129, 218, 227, 221, 129, 218, 0, 0, 129, 218, 234, 205, 129, 218, 0, 0, 129, 218, 220, 218, 255, 255, 0, 0, 255, 127, 60, 221, 255, 255, 0, 0, 255, 127, 60, 221, 129, 218, 255, 255, 129, 218, 11, 205, 129, 218, 255, 255, 129, 218, 198, 217, 129, 218, 255, 255, 129, 218, 66, 221, 125, 37, 255, 255, 125, 37, 66, 221, 125, 37, 255, 255, 125, 37, 92, 207, 125, 37, 255, 255, 125, 37, 66, 221, 125, 37, 0, 0, 129, 218, 168, 196, 125, 37, 0, 0, 129, 218, 168, 196, 129, 218, 0, 0, 129, 218, 197, 206, 129, 218, 0, 0, 129, 218, 220, 218, 129, 218, 0, 0, 129, 218, 227, 221, 255, 255, 0, 0, 255, 127, 60, 221, 255, 255, 0, 0, 255, 127, 60, 221, 0, 0, 255, 255, 255, 127, 200, 204, 0, 0, 255, 255, 255, 127, 27, 162, 0, 0, 255, 255, 255, 127, 200, 204, 129, 218, 255, 255, 129, 218, 157, 205, 129, 218, 255, 255, 129, 218, 198, 217, 129, 218, 255, 255, 129, 218, 66, 221, 125, 37, 255, 255, 125, 37, 66, 221, 125, 37, 255, 255, 125, 37, 66, 221, 125, 37, 0, 0, 129, 218, 73, 173, 129, 218, 0, 0, 129, 218, 158, 212, 129, 218, 0, 0, 129, 218, 60, 206, 125, 37, 0, 0, 125, 37, 33, 225, 129, 218, 0, 0, 125, 37, 255, 255, 129, 218, 0, 0, 125, 37, 168, 196, 0, 0, 0, 0, 255, 127, 74, 181, 255, 255, 0, 0, 255, 127, 60, 221, 0, 0, 255, 255, 255, 127, 249, 186, 125, 37, 255, 255, 129, 218, 255, 153, 125, 37, 255, 255, 129, 218, 224, 172, 129, 218, 255, 255, 129, 218, 198, 217, 129, 218, 255, 255, 129, 218, 66, 221, 125, 37, 255, 255, 125, 37, 6, 225, 125, 37, 255, 255, 125, 37, 66, 221, 155, 36, 53, 201, 84, 114, 160, 173, 255, 127, 254, 255, 155, 36, 53, 201, 20, 147, 3, 115, 215, 169, 120, 104, 155, 36, 53, 201, 128, 185, 8, 208, 243, 189, 219, 218, 155, 36, 53, 201, 149, 25, 107, 85, 186, 204, 255, 127, 155, 36, 53, 201, 222, 144, 172, 101, 198, 111, 55, 158, 155, 36, 53, 201, 151, 39, 189, 73, 105, 211, 108, 186, 155, 36, 53, 201, 229, 127, 189, 255, 184, 171, 201, 229, 155, 36, 53, 201, 150, 173, 209, 113, 15, 0, 177, 76, 184, 182, 162, 164, 228, 127, 186, 255, 123, 172, 84, 229, 184, 182, 162, 164, 118, 114, 105, 174, 254, 127, 252, 255, 184, 182, 162, 164, 195, 144, 13, 101, 215, 111, 158, 158, 184, 182, 162, 164, 6, 147, 173, 114, 180, 169, 33, 104, 184, 182, 162, 164, 115, 173, 123, 113, 16, 0, 176, 76, 184, 182, 162, 164, 10, 25, 223, 85, 0, 0, 68, 179, 184, 182, 162, 164, 28, 39, 35, 74, 68, 212, 181, 185, 184, 182, 162, 164, 104, 186, 70, 207, 131, 190, 133, 218, 184, 182, 162, 164, 63, 115, 135, 151, 142, 118, 142, 145, 82, 166, 66, 94, 35, 56, 115, 210, 137, 155, 241, 161, 254, 124, 15, 139, 50, 166, 36, 94, 94, 134, 244, 138, 245, 10, 160, 249, 211, 222, 112, 228, 15, 234, 62, 243, 215, 25, 249, 144, 136, 205, 225, 140, 53, 137, 17, 127, 82, 166, 66, 94, 94, 134, 193, 139, 35, 56, 115, 210, 137, 155, 241, 161, 160, 36, 46, 201, 234, 127, 121, 255, 193, 182, 149, 164, 204, 135, 29, 128, 50, 166, 36, 94, 94, 134, 244, 138, 245, 10, 160, 249, 15, 234, 62, 243, 249, 97, 80, 187, 229, 157, 138, 102, 98, 129, 122, 135, 216, 201, 184, 210, 202, 124, 69, 242, 5, 239, 215, 153, 227, 127, 195, 255, 137, 155, 241, 161, 222, 127, 198, 255, 240, 124, 171, 160, 56, 98, 1, 188, 50, 166, 36, 94, 94, 134, 244, 138, 99, 202, 134, 210, 15, 234, 62, 243)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_rtvjk")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jtpa7"]
data = PackedVector3Array(0, 0.207171, 0, 3.41421, 0.207171, -3.41421, 4.82843, 0.207171, 2.11057e-07, 0, 0.207171, 0, 2.11057e-07, 0.207171, -4.82843, 3.41421, 0.207171, -3.41421, -4.82843, 0.207171, -2.11057e-07, 2.11057e-07, 0.207171, -4.82843, 0, 0.207171, 0, -4.82843, 0.207171, -2.11057e-07, -3.41421, 0.207171, -3.41421, 2.11057e-07, 0.207171, -4.82843, -3.41421, 0.207171, 3.41421, 0, 0.207171, 0, -2.11057e-07, 0.207171, 4.82843, -3.41421, 0.207171, 3.41421, -4.82843, 0.207171, -2.11057e-07, 0, 0.207171, 0, -2.11057e-07, 0.207171, 4.82843, 4.82843, 0.207171, 2.11057e-07, 3.41421, 0.207171, 3.41421, -2.11057e-07, 0.207171, 4.82843, 0, 0.207171, 0, 4.82843, 0.207171, 2.11057e-07, -3.41421, 0, -3.41421, -4.82843, 0.207171, -2.11057e-07, -4.82843, 0, -2.11057e-07, -3.41421, 0, -3.41421, -3.41421, 0.207171, -3.41421, -4.82843, 0.207171, -2.11057e-07, 3.41421, 0, -3.41421, 2.11057e-07, 0.207171, -4.82843, 2.11057e-07, 0, -4.82843, 3.41421, 0, -3.41421, 3.41421, 0.207171, -3.41421, 2.11057e-07, 0.207171, -4.82843, 2.11057e-07, 0, -4.82843, -3.41421, 0.207171, -3.41421, -3.41421, 0, -3.41421, 2.11057e-07, 0, -4.82843, 2.11057e-07, 0.207171, -4.82843, -3.41421, 0.207171, -3.41421, -2.11057e-07, 0, 4.82843, 3.41421, 0.207171, 3.41421, 3.41421, 0, 3.41421, -2.11057e-07, 0, 4.82843, -2.11057e-07, 0.207171, 4.82843, 3.41421, 0.207171, 3.41421, 3.41421, 0, 3.41421, 4.82843, 0.207171, 2.11057e-07, 4.82843, 0, 2.11057e-07, 3.41421, 0, 3.41421, 3.41421, 0.207171, 3.41421, 4.82843, 0.207171, 2.11057e-07, -3.41421, 0, 3.41421, -2.11057e-07, 0.207171, 4.82843, -2.11057e-07, 0, 4.82843, -3.41421, 0, 3.41421, -3.41421, 0.207171, 3.41421, -2.11057e-07, 0.207171, 4.82843, 4.82843, 0, 2.11057e-07, 3.41421, 0.207171, -3.41421, 3.41421, 0, -3.41421, 4.82843, 0, 2.11057e-07, 4.82843, 0.207171, 2.11057e-07, 3.41421, 0.207171, -3.41421, -4.82843, 0, -2.11057e-07, -3.41421, 0.207171, 3.41421, -3.41421, 0, 3.41421, -4.82843, 0, -2.11057e-07, -4.82843, 0.207171, -2.11057e-07, -3.41421, 0.207171, 3.41421, -4.82843, 0, -2.11057e-07, -2.11057e-07, 0, 4.82843, -3.41421, 0, -3.41421, -4.82843, 0, -2.11057e-07, -3.41421, 0, 3.41421, -2.11057e-07, 0, 4.82843, -2.11057e-07, 0, 4.82843, 2.11057e-07, 0, -4.82843, -3.41421, 0, -3.41421, -2.11057e-07, 0, 4.82843, 3.41421, 0, 3.41421, 2.11057e-07, 0, -4.82843, 3.41421, 0, -3.41421, 3.41421, 0, 3.41421, 4.82843, 0, 2.11057e-07, 3.41421, 0, -3.41421, 2.11057e-07, 0, -4.82843, 3.41421, 0, 3.41421)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xyipr"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0.6, 0.00392157, 0, 1)
emission_energy_multiplier = 8.45
proximity_fade_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_halxk"]
material = SubResource("StandardMaterial3D_xyipr")
size = Vector3(0.05, 0.05, 0.05)

[sub_resource type="SphereShape3D" id="SphereShape3D_yvhkb"]
radius = 4.37898

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8cv0m"]
shader = ExtResource("3_ajv4w")
shader_parameter/spiral = 0.0
shader_parameter/wave = 0.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_j50i7"]

[node name="portal_1" type="Node3D"]
script = ExtResource("1_jdx5c")

[node name="portal_frame" type="Node3D" parent="."]

[node name="portal_frame" type="MeshInstance3D" parent="portal_frame"]
mesh = SubResource("ArrayMesh_itfa8")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="portal_frame/portal_frame"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="portal_frame/portal_frame/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_jtpa7")

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.806355, 0)
emitting = false
amount = 256
lifetime = 10.0
preprocess = 0.01
randomness = 0.44
lifetime_randomness = 1.0
mesh = SubResource("BoxMesh_halxk")
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_rotate_y = true
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0, 0)
radial_accel_min = -0.1
radial_accel_max = 0.1
tangential_accel_min = 1.25
tangential_accel_max = 3.75
angle_min = -360.0
angle_max = 360.0

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_yvhkb")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(9.79, 9.79)
texture = ExtResource("3_1685j")

[node name="spiral_screen" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_8cv0m")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_j50i7")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
